# dill-rs

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  rust-toolchain
.github/: dependabot.yml
.github/workflows/: build.yaml
dill/: Cargo.toml
dill-impl/: Cargo.toml
dill-impl/src/: lib.rs  types.rs
dill/src/: builder.rs  cache.rs  catalog.rs  catalog_builder.rs  catalog_impl.rs  catalog_weak_ref.rs  errors.rs  injection_context.rs  lazy.rs  lib.rs  macros.rs  scopes.rs  specs.rs  typecast_builder.rs
dill/src/utils/: graphviz.rs  mod.rs  plantuml.rs
dill/tests/: test_builder.rs  test_catalog.rs  unit.rs
dill/tests/tests/: mod.rs  test_builder.rs  test_catalog.rs  test_graphviz.rs  test_macros.rs  test_metadata.rs  test_plantuml.rs  test_scopes.rs  test_specs.rs  test_validation.rs
examples/: README.md
examples/axum/: Cargo.toml
examples/axum/src/: authentication_layer.rs  main.rs
examples/cli/: Cargo.toml
examples/cli/src/: cli.rs  main.rs
examples/cli/src/commands/: add.rs  list.rs  mod.rs
examples/cli/src/domain/: mod.rs  repo.rs
examples/cli/src/infra/: mod.rs  repo_impl.rs  transaction.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: builder.rs  catalog.rs  errors.rs  lib.rs  scopes.rs  specs.rs  typecast_builder.rs
tests/: test_builder.rs  test_catalog.rs  test_scopes.rs  test_threads.rs
