[workspace]
resolver = "2"
members = [
    "dill-impl",
    "dill",
]


[workspace.package]
version = "0.5.2"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sergiimk/dill-rs"
repository = "https://github.com/sergiimk/dill-rs"
documentation = "https://docs.rs/dill"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["di", "ioc", "dependency-injection", "dependency-inversion"]
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml",
]


[workspace.dependencies]
dill-impl = { path = "dill-impl", version = "0.5.2" }