[workspace]
resolver = "2"
members = ["dill-impl", "dill"]


[workspace.package]
version = "0.8.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sergiimk/dill-rs"
repository = "https://github.com/sergiimk/dill-rs"
documentation = "https://docs.rs/dill"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["di", "ioc", "dependency-injection", "dependency-inversion"]
include = ["benches/*.rs", "src/**/*.rs", "Cargo.toml"]


[workspace.lints.clippy]
# clippy::all (clippy::сorrectness, clippy::suspicious, clippy::style, clippy::complexity, clippy::perf)
new_without_default = "allow"
too_many_arguments = "allow"
module_inception = "allow"

# clippy::pedantic
pedantic = { level = "warn", priority = -1 }

default_trait_access = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
wildcard_imports = "allow"


# clippy::cargo
cargo = { level = "warn", priority = 0 }
multiple_crate_versions = { level = "allow", priority = 1 }


[workspace.dependencies]
dill-impl = { path = "dill-impl", version = "0.8.0" }
