[package]
name = "dill-impl"
version = "0.5.1"
edition = "2018"
description = "Implementation details of the dill DI library."
repository = "https://github.com/sergiimk/dill-rs"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = [ "full" ] }
quote = "1"
