[package]
name = "dill"
description = "Runtime depenency injection library."
categories = ["config", "development-tools"]
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }

[dependencies]
dill-impl = { workspace = true }
thiserror = "1"
multimap = "0.9"
