[package]
name = "dill"
description = "Runtime depenency injection library."
categories = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }


[features]
default = []
tokio = ["dep:tokio"]


[dependencies]
dill-impl = { workspace = true }
thiserror = "2"
multimap = "0.10"

# Optional
tokio = { optional = true, version = "1", default-features = false, features = [
    "rt",
] }


[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
