[package]
name = "example-cli"
publish = false
version.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
include.workspace = true

[dependencies]
dill = { path = "../../dill" }

async-trait = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
